<resources>
    <string name="app_name">AdoptaPupFinal</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellidos">Apellido</string>
    <string name="Correo">Usuario</string>
    <string name="Comtraseña">Contraseña</string>
    <string name="Masculino">Masculino</string>
    <string name="Femenino">Femenino</string>
    <string name="Registro">Crear Cuenta</string>
    <string name="votar">Votar</string>
    <string name="razas">Razas</string>
    <string name="Imagen">Imagen</string>
    <string name="Favorito">Favorito</string>
    <string name="Ranking">Ranking</string>
    <string name="popularidad">Populares</string>
    <string name="login">Iniciar Sesión</string>
    <string name="continuarButton">CONTINUAR</string>
    <string name="yatienescuent">¿Ya tienes cuenta?</string>
    <string name="crearcuenta">Crear Cuenta nueva</string>
    <string name="Ingresarmensaje">Igrese el mensaje</string>



</resources>