<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Favoritos">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FF0000"
        android:gravity="center_vertical"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <ImageButton
                android:id="@+id/buttonOptions"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_options" />

        </LinearLayout>
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner_dog_breeds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="39dp"
        android:prompt="@string/razas"
        />

    <!-- Foto mediana -->
    <ImageView
        android:id="@+id/image_dog"
        android:layout_width="330dp"
        android:layout_height="380dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/img_base" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_dog"
        android:layout_margin="16dp"
        android:background="#D9D9D9"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Caracteristicas"
            android:textColor="#000000" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottomMenu"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:layout_gravity="bottom"
        android:background="@drawable/lineinferior"
        android:orientation="horizontal"
        android:padding="10dp">

        <!-- Botones del menú -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitCenter"
                android:src="@drawable/voteblack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/votar"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:scaleType="fitCenter"
                android:src="@drawable/razablack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/razas"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitCenter"
                android:src="@drawable/imagenblack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Imagen"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitCenter"
                android:src="@drawable/favoritosblack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Favorito"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitCenter"
                android:src="@drawable/uploadBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ranking"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
